--- a/package.json
+++ b/package.json
@@ -10,7 +10,13 @@
     "@types/node": "^16.18.16",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "bootstrap": "^5.2.3",
+    "@typescript-eslint/eslint-plugin": "^5.59.6",
+    "@typescript-eslint/parser": "^5.59.6",
+    "bootstrap": "^5.3.2",
+    "eslint": "^8.40.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-react": "^7.32.2",
     "gsap": "^3.12.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -18,6 +24,7 @@
     "react-icons": "^4.11.0",
     "react-modal": "^3.16.1",
     "react-scripts": "5.0.1",
+    "react-uid": "^2.3.3",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
@@ -47,6 +54,14 @@
   },
   "devDependencies": {
     "@types/react-modal": "^3.13.1",
+    "eslint-import-resolver-typescript": "^3.5.5",
+    "eslint-plugin-array-func": "^3.1.8",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-sonarjs": "^0.19.0",
+    "eslint-plugin-unicorn": "^47.0.0",
+    "eslint-plugin-yml": "^1.7.0",
+    "prettier": "^2.8.8",
     "tailwindcss": "^3.2.7"
   }
 }
