--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/react-modal": "^3.13.1",
     "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-array-func": "^3.1.8",
